add connection pool and logging from Greg.L.Turnquist cockroach labs vid

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,3 +21,22 @@ spring.datasource.password=
 
 
 #spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
+
+spring.datasource.hikari.minimumIdle=5
+spring.datasource.hikari.maximumPoolSize=10
+spring.datasource.hikari.idleTimeout=30000
+spring.datasource.hikari.maxLifetime=2000000
+spring.datasource.hikari.connectionTimeout=30000
+spring.datasource.hikari.poolName=SpringBootJPAHikariCP
+
+logging.level.root=INFO
+logging.level.org.springframework.transaction=trace
+logging.level.org.springframework.transaction.support=trace
+logging.level.org.springframework.data.jpa=trace
+logging.level.org.springframework.jdbc=trace
+logging.level.org.hibernate.SQL=debug
+logging.level.org.hibernate.orm.jdbc.bind=trace
+logging.level.org.hibernate.engine.transaction=trace
+logging.level.org.hibernate.stat=debug
+logging.level.org.hibernate.cache=debug
+logging.level.org.hibernate.SQL_SLOW=info
